--- a/app/src/main/res/layout/fragment_navigation_other.xml
+++ b/app/src/main/res/layout/fragment_navigation_other.xml
@@ -8,11 +8,11 @@
     <ScrollView
         android:id="@+id/scrollView5"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="80dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
         android:clipToPadding="false"
         android:fillViewport="false"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/cardNavBg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -40,11 +40,7 @@
                 android:id="@+id/cardView6"
                 android:layout_width="0dp"
                 android:layout_height="2dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
                 app:cardBackgroundColor="#6b6b6b"
                 app:cardCornerRadius="0dp"
                 app:cardElevation="0dp"
@@ -144,6 +140,7 @@
                         android:layout_height="95dp"
                         android:layout_marginEnd="32dp"
                         android:layout_marginRight="32dp"
+                        android:foreground="?android:attr/selectableItemBackground"
                         android:onClick="openInvertedInferno"
                         android:visibility="visible"
                         app:cardBackgroundColor="@android:color/transparent"
@@ -151,8 +148,7 @@
                         app:cardElevation="0dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/cardViewButton6"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:foreground="?android:attr/selectableItemBackground">
+                        app:layout_constraintTop_toTopOf="parent">
 
                         <android.support.constraint.ConstraintLayout
                             android:layout_width="match_parent"
@@ -199,6 +195,7 @@
                         android:layout_height="95dp"
                         android:layout_marginStart="32dp"
                         android:layout_marginLeft="32dp"
+                        android:foreground="?android:attr/selectableItemBackground"
                         android:onClick="openInverted"
                         android:visibility="visible"
                         app:cardBackgroundColor="@android:color/transparent"
@@ -206,8 +203,7 @@
                         app:cardElevation="0dp"
                         app:layout_constraintEnd_toStartOf="@+id/cardViewButton7"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:foreground="?android:attr/selectableItemBackground">
+                        app:layout_constraintTop_toTopOf="parent">
 
                         <android.support.constraint.ConstraintLayout
                             android:layout_width="match_parent"
@@ -254,6 +250,7 @@
                         android:layout_height="95dp"
                         android:layout_marginEnd="32dp"
                         android:layout_marginRight="32dp"
+                        android:foreground="?android:attr/selectableItemBackground"
                         android:onClick="openSteam"
                         android:visibility="visible"
                         app:cardBackgroundColor="@android:color/transparent"
@@ -263,8 +260,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/cardViewButton2"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="1.0"
-                        android:foreground="?android:attr/selectableItemBackground">
+                        app:layout_constraintVertical_bias="1.0">
 
                         <android.support.constraint.ConstraintLayout
                             android:layout_width="match_parent"
@@ -311,6 +307,7 @@
                         android:layout_height="95dp"
                         android:layout_marginStart="32dp"
                         android:layout_marginLeft="32dp"
+                        android:foreground="?android:attr/selectableItemBackground"
                         android:onClick="openAospEx"
                         android:visibility="visible"
                         app:cardBackgroundColor="@android:color/transparent"
@@ -318,8 +315,7 @@
                         app:cardElevation="0dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/cardViewButton5"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:foreground="?android:attr/selectableItemBackground">
+                        app:layout_constraintStart_toStartOf="parent">
 
                         <android.support.constraint.ConstraintLayout
                             android:layout_width="match_parent"
@@ -371,20 +367,20 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardNavBg"
         android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:layout_height="50dp"
         app:cardBackgroundColor="#0C131D"
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardNavBack"
         android:layout_width="80dp"
-        android:layout_height="65dp"
+        android:layout_height="50dp"
+        android:foreground="?android:attr/selectableItemBackground"
         android:onClick="openHome"
         app:cardBackgroundColor="#16202A"
         app:cardCornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:foreground="?android:attr/selectableItemBackground">
+        app:layout_constraintStart_toStartOf="parent">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -400,7 +396,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
-                android:fontFamily="@font/timeburnernormal"
+                android:fontFamily="@font/montserrat"
                 android:text="@string/minussymbol"
                 android:textSize="36sp"
                 android:textStyle="bold"
@@ -415,13 +411,13 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardNavPB"
         android:layout_width="120dp"
-        android:layout_height="65dp"
+        android:layout_height="50dp"
+        android:foreground="?android:attr/selectableItemBackground"
         android:onClick="openNavPureBlack"
         app:cardBackgroundColor="#0C131D"
         app:cardCornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cardNavBack"
-        android:foreground="?android:attr/selectableItemBackground">
+        app:layout_constraintStart_toEndOf="@+id/cardNavBack">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -431,9 +427,10 @@
                 android:id="@+id/textView44"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/timeburnernormal"
+                android:fontFamily="@font/raleway_bold"
                 android:gravity="center"
                 android:text="@string/pure_black_nav"
+                android:textSize="11sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -445,14 +442,14 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardNavTGX"
         android:layout_width="0dp"
-        android:layout_height="65dp"
+        android:layout_height="50dp"
+        android:foreground="?android:attr/selectableItemBackground"
         android:onClick="openNavTGX"
         app:cardBackgroundColor="#0C131D"
         app:cardCornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/cardNavPB"
         app:layout_constraintEnd_toStartOf="@+id/cardNavOthers"
-        app:layout_constraintStart_toEndOf="@+id/cardNavPB"
-        android:foreground="?android:attr/selectableItemBackground">
+        app:layout_constraintStart_toEndOf="@+id/cardNavPB">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -462,9 +459,10 @@
                 android:id="@+id/textView45"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/timeburnernormal"
+                android:fontFamily="@font/raleway_bold"
                 android:gravity="center"
                 android:text="Telegram\nX"
+                android:textSize="11sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -477,14 +475,14 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardNavOthers"
         android:layout_width="0dp"
-        android:layout_height="65dp"
+        android:layout_height="50dp"
+        android:foreground="?android:attr/selectableItemBackground"
         app:cardBackgroundColor="#0C131D"
         app:cardCornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardNavTGX"
-        app:layout_constraintTop_toTopOf="@+id/cardNavTGX"
-        android:foreground="?android:attr/selectableItemBackground">
+        app:layout_constraintTop_toTopOf="@+id/cardNavTGX">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -503,10 +501,11 @@
                 android:id="@+id/textView46"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/timeburnernormal"
+                android:fontFamily="@font/raleway_bold"
                 android:gravity="center"
                 android:text="@string/other_themes_nav"
                 android:textColor="#fff"
+                android:textSize="11sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
