--- a/app/src/main/res/layout/outdatedpopup.xml
+++ b/app/src/main/res/layout/outdatedpopup.xml
@@ -38,18 +38,26 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:fontFamily="@font/timeburnernormal"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:fontFamily="@font/raleway_bold"
             android:gravity="center"
             android:text="APP OUTDATED"
             android:textSize="36sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView17"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <TextView
             android:id="@+id/textView17"
@@ -60,7 +68,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:fontFamily="@font/timeburnernormal"
+            android:fontFamily="@font/raleway"
             android:gravity="center_horizontal"
             android:text="There is a new version available\non the Play  Store\nYou should really update."
             android:textSize="18sp"
@@ -79,6 +87,7 @@
             android:layout_marginRight="100dp"
             android:layout_marginBottom="250dp"
             android:background="@drawable/button"
+            android:fontFamily="@font/raleway_bold"
             android:text="Open Play Store"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
