--- a/app/src/main/res/layout/fragment_defpurple.xml
+++ b/app/src/main/res/layout/fragment_defpurple.xml
@@ -138,7 +138,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/textView14"
@@ -264,6 +264,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView7"
+                        app:layout_constraintTop_toBottomOf="@+id/cardView6"
                         app:srcCompat="@drawable/ic_lens_saints" />
 
                     <TextView
