--- a/app/src/main/res/layout/fragment_disrespect.xml
+++ b/app/src/main/res/layout/fragment_disrespect.xml
@@ -138,14 +138,14 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
 
                     <ImageView
                         android:id="@+id/imageView34"
                         android:layout_width="50dp"
                         android:layout_height="55dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginLeft="32dp"
                         android:layout_marginTop="35dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginRight="8dp"
